; ModuleID = '/home/carl/AnghaBench/git/extr_packfile.c_nth_packed_object_oid.c'
source_filename = "/home/carl/AnghaBench/git/extr_packfile.c_nth_packed_object_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.packed_git = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.object_id* @nth_packed_object_oid(%struct.object_id* %0, %struct.packed_git* %1, i32 %2) #0 {
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca %struct.packed_git*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.object_id* %0, %struct.object_id** %5, align 8
  store %struct.packed_git* %1, %struct.packed_git** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.packed_git*, %struct.packed_git** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i8* @nth_packed_object_sha1(%struct.packed_git* %9, i32 %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store %struct.object_id* null, %struct.object_id** %4, align 8
  br label %22

15:                                               ; preds = %3
  %16 = load %struct.object_id*, %struct.object_id** %5, align 8
  %17 = getelementptr inbounds %struct.object_id, %struct.object_id* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @hashcpy(i32 %18, i8* %19)
  %21 = load %struct.object_id*, %struct.object_id** %5, align 8
  store %struct.object_id* %21, %struct.object_id** %4, align 8
  br label %22

22:                                               ; preds = %15, %14
  %23 = load %struct.object_id*, %struct.object_id** %4, align 8
  ret %struct.object_id* %23
}

declare dso_local i8* @nth_packed_object_sha1(%struct.packed_git*, i32) #1

declare dso_local i32 @hashcpy(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
